# libvfio-user

./: Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: coverity.sh  pull_request.sh  pull_request.yml
docs/: meson.build  testing.md
include/: meson.build
include/pci_caps/: meson.build
lib/: dma.h  meson.build
samples/: meson.build
test/: meson.build  test-client-server.sh
test/py/: meson.build
